UCL-115 fixed snackbar overflow on small viewports

--- a/src/Notifications/Snackbar/SnackbarItem/SnackbarItem.module.scss
+++ b/src/Notifications/Snackbar/SnackbarItem/SnackbarItem.module.scss
@@ -5,7 +5,7 @@
   border-radius: var(--snackbar-border-radius);
   display: flex;
   width: 100%;
-  box-sizing: content-box;
+  box-sizing: border-box;
   transition: height 0.2s ease-in-out;
   flex-grow: 0;
 
